--- a/index.html
+++ b/index.html
@@ -8,28 +8,113 @@
         <link rel="stylesheet" href="style.css">
         <!-- Подключение FlexBoxGrid2 -->
         <link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
+        <!-- Подключение шрифта Roboto -->
+        <link rel="stylesheet" href="https://use.typekit.net/fyn5mnn.css">
     </head>
     <body>
         <header>
-            <div class="container">
-            
-                <div class="row between-xs middle-xs" id="test">
-                    <div class="col">
-                        <a href="#"><img src="img/logo.svg"></a>
+            <div class="container" id="head">
+
+                    <div>
+                        <a href="#">
+                            <img src="img/logo.svg">
+                        </a>
                     </div>
-                    <div class="col">
+                    <div>
                         <button class="auth">Войти</button>
-                        <a href="#"><img src="img/basket.svg"></a>
+                        <a href="#">
+                            <img src="img/basket.svg" id="basket">
+                        </a>
                     </div> 
-                </div>
 
             </div>
         </header>
         <div class="container">
-            <input type="search" placeholder="Поиск по ресторанам и кухням">
+            <input type="search" placeholder="Поиск по ресторанам и кухням" class="search">
             <h1>Рестораны в Москве</h1>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-1.png">
+                        <p class="cafe_name">Макдоналдс — Газетный</p>
+                        <p class="price_kitchen">₽₽ • Бургеры</p>
+                        <p class="minuts">25 - 35 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-2.png">
+                        <p class="cafe_name">DimSum & Co — ЦДМ</p>
+                        <p class="price_kitchen">₽ • Японская • Китайская • Азиатская</p>
+                        <p class="minuts">40 - 50 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-3.png">
+                        <p class="cafe_name">ДвижОК — Манежная</p>
+                        <p class="price_kitchen">₽ • Американская • Европейская</p>
+                        <p class="minuts">35 - 45 мин</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-4.png">
+                        <p class="cafe_name">НЯ — NHA</p>
+                        <p class="price_kitchen">₽₽ • Вьетнамская</p>
+                        <p class="minuts">30 - 40 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-5.png">
+                        <p class="cafe_name">Точка Дзы — Цветной</p>
+                        <p class="price_kitchen">₽₽ • Вьетнамская</p>
+                        <p class="minuts">40 - 50 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-6.png">
+                        <p class="cafe_name">Cinnabon</p>
+                        <p class="price_kitchen">₽ • Выпечка • Десерты • Капкейки</p>
+                        <p class="minuts">25 - 35 мин</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-7.png">
+                        <p class="cafe_name">PIZZELOVE</p>
+                        <p class="price_kitchen">₽₽ • Пицца</p>
+                        <p class="minuts">15 - 25 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-8.png">
+                        <p class="cafe_name">Zю кафе — Тверская</p>
+                        <p class="price_kitchen">₽₽ • Японская</p>
+                        <p class="minuts">25 - 35 мин</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/card/card-9.png">
+                        <p class="cafe_name">Bar BQ Cafe — Манежная</p>
+                        <p class="price_kitchen">₽₽₽ • Европейская</p>
+                        <p class="minuts">30 - 40 мин</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         
 
     </body>
