Решил ту проблему, footer готов на 80%

--- a/index.html
+++ b/index.html
@@ -135,22 +135,63 @@
         </div>
         <footer>
             <div class="container">
-                <a href="#">
-                    <img src="img/white-logo.svg" id="footer-logo">
+                <a href="#" id="footer-logo">
+                    <img src="img/white-logo.svg">
                 </a>
                 <div class="separator" id="first-separ"></div>
                 <div class="row">
-                    <div class="language col-xs-12 col-md-3 col-lg-3">
-
+                    <div class="col-xs-12 
+                    col-md-3 
+                    col-lg-3">
+                        <div class="language"></div>
+                        <div class="socials">
+                            <p>
+                                <span class="green">#</span>UberEats
+                            </p>
+                            <a href="#">
+                                <img src="img/socials/facebook.svg" 
+                                id="facebook">
+                            </a>
+                            <a href="#">
+                                <img src="img/socials/twitter.svg"
+                                id="twitter">
+                            </a>
+                            <a href="#">
+                                <img src="img/socials/instagram.svg">
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-md-offset-1 col-lg-offset-1 col-xs-12 col-md-4 col-lg-4">
+                    <div class="col-md-offset-1 
+                    col-lg-offset-1 
+                    col-xs-12 
+                    col-md-4 
+                    col-lg-4">
                         <a href="#">Об UberEats</a>
+                        <a href="#">Станьте партнёром по доставке</a>
+                        <a href="#">Станьте парнёром-рестораном</a>
                     </div>
-                    <div class="col-xs-12 col-md-4 col-lg-4">
+                    <div class="col-xs-12 
+                    col-md-4 
+                    col-lg-4">
                         <a href="#">Все города</a>
+                        <a href="#">Цены</a>
+                        <a href="#">Помощь</a>
+                        <a href="#">FAQs</a>
                     </div>
 
                 </div>
+                <div class="separator" id="second-separ"></div>
+                <div class="download">
+                    <a href="#" id="app-store">
+                        <img src="img/App Store Apple.svg">
+                    </a>
+                    <a href="#">
+                        <img src="img/Google Play.svg">
+                    </a>
+                </div>
+                
+                <div class="separator" id="third-separ"></div>
+
 
             </div>
         </footer>
