Осталось сделать только кнопку прокрутки "наверх"

--- a/index.html
+++ b/index.html
@@ -189,11 +189,32 @@
                         <img src="img/Google Play.svg">
                     </a>
                 </div>
-                
                 <div class="separator" id="third-separ"></div>
 
 
+                <div class="row personal-data">
+                    <div class="col-xs-12 
+                    col-md-3 
+                    col-lg-3">
+                        <p>© 2017 Uber Technologies Inc.</p>
+                    </div>
+                    <div class="col-xs-12 
+                    col-md-3 
+                    col-lg-3 
+                    col-md-offset-1 
+                    col-lg-offset-1">
+                        <a href="#">Обработка персональных данных</a>
+                    </div>
+                    <div class="col-xs-12 
+                    col-md-3 
+                    col-lg-3 
+                    col-md-offset-1 
+                    col-lg-offset-1">
+                        <a href="#">Пользовательское соглашение</a>
+                    </div>
+                </div>
             </div>
+            <button class="button-up"><a href="#"></a></button>
         </footer>
     </body>
 </html>
